# fos3

./: MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
examples/: hetzner_crud.py
fos3/: __init__.py  __main__.py  constants.py  io_utils.py  s3.py
fos3/arrow/: __init__.py  _io.py  _s3.py
fos3/hetzner/: __init__.py  bucket.py
scripts/: release_example.sh
tests/hetzner/: test_bucket.py
