[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fos3"
description = "Distributed file system tools and services."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="ckirua", email="paektec@gmail.com" }
]
urls = { Homepage = "https://github.com/paektec/fos3" }
keywords = ["distributed", "file", "system", "tools", "services"]
requires-python = ">=3.13"
dynamic = ["dependencies", "version"]

[tool.setuptools]
packages = [
    "fos3",
    "fos3.hetzner",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "fos3.__about__.__version__"}


